add style and profiles
